--- a/index.html
+++ b/index.html
@@ -455,13 +455,13 @@
         <i class="fas fa-arrow-circle-up fa-2xl"></i>
     </span>
 </body>
-<script src="../js/script.js">
+<script src="script.js">
 </script>
-<script src="../js/cdn.jsdelivr.net_npm_swiper@10.2.0_swiper-bundle.min.js"></script>
-<script  src="../js/swiper.js" >
+<script src="cdn.jsdelivr.net_npm_swiper@10.2.0_swiper-bundle.min.js"></script>
+<script  src="swiper.js" >
     
 </script>
-<script src="../js/aos.js"></script>
+<script src="aos.js"></script>
     <script>
         AOS.init();
     </script>
