--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
                 <div class="hidden" ><h3>double click and hold on any image!</h3></div>        
     
             </div>
-                                        <div class="slide-triangle1" ><img src="2.png"></div>
-                        <div class="slide-triangle2"><img src="5.png" ></div>
+                                        <div class="slide-triangle1" ><img src="2-min.png"></div>
+                        <div class="slide-triangle2"><img src="5-min.png" ></div>
                     
 
 
