--- a/index.html
+++ b/index.html
@@ -360,8 +360,9 @@
                 <div class="swiper-slide team"> 
             <div class="click_hold">
                 <i class="fa-solid fa-question fa-bounce fa-lg"></i>
-                <div class="hidden" ><h3>double click and hold on any image!</h3></div>        
-    
+                <div class="hidden1" ><h3>double click and hold on any image!</h3></div>        
+                    <div class="hidden2" ><h3>click on any image!</h3></div>        
+
             </div>
                                         <div class="slide-triangle1" ><img src="2-min.png"></div>
                         <div class="slide-triangle2"><img src="5-min.png" ></div>
