--- a/signup.html
+++ b/signup.html
@@ -99,7 +99,7 @@
         </div> -->
     </footer>
     <script src="script.js"></script>
-    <script src="../js/aos.js"></script>
+    <script src="aos.js"></script>
     <script>
         AOS.init();
     </script>
