--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </ul>
             <div class="icons">
                 <a href="#"> <i class="fa-brands fa-facebook-f fa-lg facebook"></i></a>
-                <a href="#"> <i class="fa-brands fa-x-twitter fa-lg x" ></i></a>
+                <a href="#"> <i class="fa-brands fa-twitter fa-lg x" ></i></a>
                 <a href="#"><i class="fa-brands fa-instagram fa-lg instagram"></i></a>
                 <a href="#"> <i class="fa-brands fa-youtube fa-lg youtube"></i></a>
                 <a href="#"><i class="fa-brands fa-snapchat fa-lg snapchat"></i></a>
