--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                     <div class="hidden2" ><h3>click on any image!</h3></div>        
 
             </div>
-                                        <div class="slide-triangle1" ><img src="2-min.png"></div>
-                        <div class="slide-triangle2"><img src="5-min.png" ></div>
+                                        <div class="slide-triangle1" ><img src="2-min\ \(1\)_11zon.jpg"></div>
+                        <div class="slide-triangle2"><img src="5-min\ \(1\)_11zon.jpg" ></div>
                     
 
 
