--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </section>
 
     <!-- Features Section -->
-    <section id="features" class="features">
+    <section id="about" class="features">
         <div class="container " data-aos="fade-up">
 
             <div class="feature-intro" data-aos="fade-up">
@@ -175,7 +175,7 @@
     </section>
 
     <!-- Gallary Section -->
-    <section class="gallary">
+    <section class="gallary" id="portfolio">
 
         <div class="g1" data-aos="fade-right">
 
@@ -263,7 +263,7 @@
     </section>
 
     <!-- ==========STATISTICS============= -->
-    <section class="statis three" >
+    <section class="statis three" id="blog" >
         <div class="container nums" data-aos="fade-up">
 
             <div class="feature-card margin-top" data-aos="fade-up" >
@@ -391,7 +391,7 @@
 
     <!-- Footer -->
     
-    <footer>
+    <footer id="contact">
         <div class="container">
             <div class="contents" data-aos="fade-up">
                 <!--links holder-->
