--- a/index.html
+++ b/index.html
@@ -55,30 +55,38 @@
         <span></span>
                     </div>
                     
-        <div class="container">
+      <div class="container">
             
-            <div class="hero-content " data-aos="flip-up">
+            <div class="hero-content " id="main" data-aos="flip-up">
                 <h1 class="hero-headline">Your Dream Website Awaits</h1>
                 <p class="hero-subheadline">We create stunning and responsive websites.</p>
                 <div class="button"><a href="#portfolio" class=" hero-cta">Learn More</a></div>
-
-
-
             </div>
+
+                <div class="hero-content " id="first" data-aos="flip-up">
+                    <h1 class="hero-headline">Lorem ipsum dolor sit amet 2.</h1>
+                    <p class="hero-subheadline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, praesentium?</p>
+                    <div class="button"><a href="#portfolio" class=" hero-cta">Learn More</a></div>
+                </div>
+
+                    <div class="hero-content " id="second" data-aos="flip-up">
+                        <h1 class="hero-headline">Lorem lorem lorem lorem lorem 3.</h1>
+                        <p class="hero-subheadline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, praesentium?</p>
+                        <div class="button"><a href="#portfolio" class=" hero-cta">Learn More</a></div>
+            </div>
+
             <div class="switchers" data-aos="fade-down">
-                <div><a href="#">01</a>
+                <div class="oth" id="one">01
                 </div>
-                <div><a href="#">02</a>
+                <div class="oth" id="two">02
                 </div>
-                <div><a href="#">03</a>
+                <div class="oth" id="three">03
                 </div>
 
             </div>
 
 
 
-
-        </div>
 
         </div>
     </section>
