--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
 
                     <div class="hero-content " id="second" data-aos="flip-up">
-                        <h1 class="hero-headline">Lorem lorem lorem lorem lorem 3.</h1>
+                        <h1 class="hero-headline">Lorem lorem lorem 3.</h1>
                         <p class="hero-subheadline">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, praesentium?</p>
                         <div class="button"><a href="#portfolio" class=" hero-cta">Learn More</a></div>
             </div>
