--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     
       <div class="container">
             
-            <div class="hero-content " id="main" data-aos="flip-up">
+            <div class="hero-content " id="main" data-aos="flip-up" data-aos-delay="200" data-aos-duration="1000">
                 <h1 class="hero-headline">Your Dream Website Awaits</h1>
                 <p class="hero-subheadline">We create stunning and responsive websites.</p>
                 <div class="button"><a href="#portfolio" class=" hero-cta">Learn More</a></div>
